# shr

./: .gitignore  benchmark_bridge.py  demo_data.py  live_fetcher.py  llm_resolver.py  main.py  meta_utils.py  presets.py  preview_mockups.py  pyproject.toml  requirements.txt  yaml_render.py
.streamlit/: config.toml
auth/: __init__.py  auth.py  db.py  gate.py  pause_resume.py  subscription.py
dashboard/: app.py  styles.py
dashboard/.streamlit/: config.toml
dashboard/views/: account.py  admin.py  create.py  dashboard.py  login.py  manage.py  preview.py  privacy.py  refund.py  service.py  terms.py
payload_pipeline/: .env.example  README.md  adapters.py  builders.py  launch.py  lead_form_create.py  requirements.txt  schemas.py  upload_image.py  validate.py
payload_pipeline/inputs/: example_traffic_campaign.yaml  example_traffic_proximity.yaml  pilot_test.yaml
