[project]
name = "shr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.1",
    "google-genai>=0.3.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "razorpay>=1.4",
    "requests>=2.31",
    "streamlit>=1.32",
    "streamlit-cookies-controller>=0.0.4",
]
